--- a/dotenv_files/.env
+++ b/dotenv_files/.env
@@ -1,4 +1,4 @@
-SECRET_KEY="CHANGE-ME"
+SECRET_KEY="irntcmp#1"
 
 # 0 False, 1 True
 DEBUG="1"
@@ -7,8 +7,8 @@ DEBUG="1"
 ALLOWED_HOSTS="127.0.0.1, localhost"
 
 DB_ENGINE="django.db.backends.postgresql"
-POSTGRES_DB="CHANGE-ME"
-POSTGRES_USER="CHANGE-ME"
-POSTGRES_PASSWORD="CHANGE-ME"
-POSTGRES_HOST="localhost"
+POSTGRES_DB="blog_data_db"
+POSTGRES_USER="blog_user"
+POSTGRES_PASSWORD="irntcmp#1"
+POSTGRES_HOST="psql"
 POSTGRES_PORT="5432"
